Preliminary positioning of piano keys

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
         <ul>
             <li><a off-href="./guitar" class="disabled">Guitar</a></li>
-            <li><a href="./piano">Piano</a></li>
+            <li><a href="piano.html">Piano</a></li>
         </ul>
     </nav>
 
