--- a/piano.html
+++ b/piano.html
@@ -7,15 +7,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn Piano Music Intervals</title>
     <link rel="stylesheet" href="assets/piano.css">
+
+    <!-- Position numbers are for an easier development time -->
+    <!-- Will add more to it after initial laying out is done -->
+    <style id="no-pos-numbers">
+        .position {
+            color: transparent;
+        }
+    </style>
 </head>
 
 <body>
 
     <div id="piano">
-        <div class="position"></div>
-        <div class="position"></div>
-        <div class="position"></div>
+        <div class="position">1</div>
+        <div class="position">2</div>
+        <div class="position">3</div>
+        <div class="position">4</div>
+        <div class="position">5</div>
+        <div class="position">6</div>
+        <div class="position">7</div>
+        <div class="position">8</div>
+        <div class="position">9</div>
+        <div class="position">10</div>
+        <div class="position">11</div>
+        <div class="position">12</div>
+        <div class="position">13</div>
+        <div class="position">14</div>
+        <div class="position">15</div>
+        <div class="position">16</div>
+        <div class="position">17</div>
+        <div class="position">18</div>
+        <div class="position">19</div>
+        <div class="position">20</div>
+        <div class="position">21</div>
+        <div class="position">22</div>
+        <div class="position">23</div>
+        <div class="position">24</div>
+        <div class="position">25</div>
+        <div class="position">26</div>
+        <div class="position">27</div>
+        <div class="position">28</div>
+        <div class="position">29</div>
+        <div class="position">30</div>
+        <div class="position">31</div>
+        <div class="position">32</div>
+        <div class="position">33</div>
+        <div class="position">34</div>
+        <div class="position">35</div>
+        <div class="position">36</div>
+        <div class="position">37</div>
+        <div class="position">38</div>
     </div>
+    <script>
+        /* The next line is great for laying out initially. Remove when laying out done */
+        // document.querySelector("#no-pos-numbers").remove()
+
+        document.querySelectorAll(".position").forEach(el => {
+            el.textContent = "";
+        })
+    </script>
 </body>
 
 </html>
