Rotate clicking mode

--- a/piano.html
+++ b/piano.html
@@ -59,6 +59,20 @@
         <div class="position">37</div>
         <div class="position">38</div>
     </div>
+
+
+    <nav id="click-mode">
+        <p></p>
+        <span>When I click a key:</span><br/>
+        <ul>
+            <li id="select-root" class="active">Select Root</li>
+            <li id="get-interval">Get Interval</li>
+            <li id="highlight-note">Highlight note</li>
+        </ul>
+    </nav>
+
+    <div id="result-interval"></div>
+
     <script>
         /* The next line is great for laying out initially. Remove when laying out done */
         // document.querySelector("#no-pos-numbers").remove()
