Rotate clicking mode icons

--- a/piano.html
+++ b/piano.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn Piano Music Intervals</title>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <link rel="stylesheet" href="assets/piano.css">
 
     <!-- Position numbers are for an easier development time -->
@@ -65,9 +66,9 @@
         <p></p>
         <span>When I click a key:</span><br/>
         <ul>
-            <li id="select-root" class="active">Select Root</li>
-            <li id="get-interval">Get Interval</li>
-            <li id="highlight-note">Highlight note</li>
+            <li id="select-root" class="active"><i class="fa fa-home"></i> Select Root</li>
+            <li id="get-interval"><i class="fa fa-signal"></i> Get Interval</li>
+            <li id="highlight-note"><i class="fa fa-highlighter"></i> Highlight note</li>
         </ul>
     </nav>
 
