Home mode useable

--- a/piano.html
+++ b/piano.html
@@ -21,44 +21,44 @@
 <body>
 
     <div id="piano">
-        <div class="position">1</div>
-        <div class="position">2</div>
-        <div class="position">3</div>
-        <div class="position">4</div>
-        <div class="position">5</div>
-        <div class="position">6</div>
-        <div class="position">7</div>
-        <div class="position">8</div>
-        <div class="position">9</div>
-        <div class="position">10</div>
-        <div class="position">11</div>
-        <div class="position">12</div>
-        <div class="position">13</div>
-        <div class="position">14</div>
-        <div class="position">15</div>
-        <div class="position">16</div>
-        <div class="position">17</div>
-        <div class="position">18</div>
-        <div class="position">19</div>
-        <div class="position">20</div>
-        <div class="position">21</div>
-        <div class="position">22</div>
-        <div class="position">23</div>
-        <div class="position">24</div>
-        <div class="position">25</div>
-        <div class="position">26</div>
-        <div class="position">27</div>
-        <div class="position">28</div>
-        <div class="position">29</div>
-        <div class="position">30</div>
-        <div class="position">31</div>
-        <div class="position">32</div>
-        <div class="position">33</div>
-        <div class="position">34</div>
-        <div class="position">35</div>
-        <div class="position">36</div>
-        <div class="position">37</div>
-        <div class="position">38</div>
+        <div id="pos-1" class="position">1</div>
+        <div id="pos-2" class="position">2</div>
+        <div id="pos-3" class="position">3</div>
+        <div id="pos-4" class="position">4</div>
+        <div id="pos-5" class="position">5</div>
+        <div id="pos-6" class="position">6</div>
+        <div id="pos-7" class="position">7</div>
+        <div id="pos-8" class="position">8</div>
+        <div id="pos-9" class="position">9</div>
+        <div id="pos-10" class="position">10</div>
+        <div id="pos-11" class="position">11</div>
+        <div id="pos-12" class="position">12</div>
+        <div id="pos-13" class="position">13</div>
+        <div id="pos-14" class="position">14</div>
+        <div id="pos-15" class="position">15</div>
+        <div id="pos-16" class="position">16</div>
+        <div id="pos-17" class="position">17</div>
+        <div id="pos-18" class="position">18</div>
+        <div id="pos-19" class="position">19</div>
+        <div id="pos-20" class="position">20</div>
+        <div id="pos-21" class="position">21</div>
+        <div id="pos-22" class="position">22</div>
+        <div id="pos-23" class="position">23</div>
+        <div id="pos-24" class="position">24</div>
+        <div id="pos-25" class="position">25</div>
+        <div id="pos-26" class="position">26</div>
+        <div id="pos-27" class="position">27</div>
+        <div id="pos-28" class="position">28</div>
+        <div id="pos-29" class="position">29</div>
+        <div id="pos-30" class="position">30</div>
+        <div id="pos-31" class="position">31</div>
+        <div id="pos-32" class="position">32</div>
+        <div id="pos-33" class="position">33</div>
+        <div id="pos-34" class="position">34</div>
+        <div id="pos-35" class="position">35</div>
+        <div id="pos-36" class="position">36</div>
+        <div id="pos-37" class="position">37</div>
+        <div id="pos-38" class="position">38</div>
     </div>
 
 
