--- a/piano.html
+++ b/piano.html
@@ -66,9 +66,9 @@
         <p></p>
         <span>When I click a key:</span><br/>
         <ul>
-            <li id="select-root" class="active"><i class="fa fa-home"></i> Select Root</li>
-            <li id="get-interval"><i class="fa fa-signal"></i> Get Interval</li>
-            <li id="highlight-note"><i class="fa fa-highlighter"></i> Highlight note</li>
+            <li id="select-root" class="active"><i class="fa fa-home"></i> Select <b>R</b>oot</li>
+            <li id="get-interval"><i class="fa fa-signal"></i> Get <b>I</b>nterval</li>
+            <li id="highlight-note"><i class="fa fa-highlighter"></i> Highlight <b>n</b>ote</li>
         </ul>
     </nav>
 
