Shortcut keys to click mode useable

--- a/piano.html
+++ b/piano.html
@@ -66,7 +66,7 @@
         <p></p>
         <span>When I click a key:</span><br/>
         <ul>
-            <li id="select-root" class="active"><i class="fa fa-home"></i> Select <b>R</b>oot</li>
+            <li id="select-root" class="active"><b><i class="fa fa-home"></i></b> Select Root (<b>h</b>ome)</li>
             <li id="get-interval"><i class="fa fa-signal"></i> Get <b>I</b>nterval</li>
             <li id="highlight-note"><i class="fa fa-highlighter"></i> Highlight <b>n</b>ote</li>
         </ul>
