Added octave switching

--- a/piano.html
+++ b/piano.html
@@ -61,6 +61,15 @@
         <div id="pos-38" class="position">38</div>
     </div>
 
+    <!-- Alternately: Mouseover mechanism for changing octaves. Maybe for Guitar later. -->
+    <!--
+    <div id="octaves">
+        <div class="octave">-2</div>
+        <div class="octave">-1</div>
+        <div class="octave">+1</div>
+        <div class="octave">+2</div>
+    </div>
+    -->
 
     <nav id="click-mode">
         <p></p>
