On holding key and releasing key tunes prepped

--- a/piano.html
+++ b/piano.html
@@ -91,6 +91,8 @@
             el.textContent = "";
         })
     </script>
+
+    <script src="assets/notesplayer.js"></script>
     <script src="assets/piano.js"></script>
 </body>
 
