Holding keys and releasing them will play tunes; Added Interval shortcut legend

--- a/piano.html
+++ b/piano.html
@@ -20,45 +20,46 @@
 
 <body>
 
+    <!-- These octaves are not relative to user's chosen key/root but to middle C, for the purpose of translating into numeric pitches for MIDI Adapter -->
     <div id="piano">
-        <div id="pos-1" class="position">1</div>
-        <div id="pos-2" class="position">2</div>
-        <div id="pos-3" class="position">3</div>
-        <div id="pos-4" class="position">4</div>
-        <div id="pos-5" class="position">5</div>
-        <div id="pos-6" class="position">6</div>
-        <div id="pos-7" class="position">7</div>
-        <div id="pos-8" class="position">8</div>
-        <div id="pos-9" class="position">9</div>
-        <div id="pos-10" class="position">10</div>
-        <div id="pos-11" class="position">11</div>
-        <div id="pos-12" class="position">12</div>
-        <div id="pos-13" class="position">13</div>
-        <div id="pos-14" class="position">14</div>
-        <div id="pos-15" class="position">15</div>
-        <div id="pos-16" class="position">16</div>
-        <div id="pos-17" class="position">17</div>
-        <div id="pos-18" class="position">18</div>
-        <div id="pos-19" class="position">19</div>
-        <div id="pos-20" class="position">20</div>
-        <div id="pos-21" class="position">21</div>
-        <div id="pos-22" class="position">22</div>
-        <div id="pos-23" class="position">23</div>
-        <div id="pos-24" class="position">24</div>
-        <div id="pos-25" class="position">25</div>
-        <div id="pos-26" class="position">26</div>
-        <div id="pos-27" class="position">27</div>
-        <div id="pos-28" class="position">28</div>
-        <div id="pos-29" class="position">29</div>
-        <div id="pos-30" class="position">30</div>
-        <div id="pos-31" class="position">31</div>
-        <div id="pos-32" class="position">32</div>
-        <div id="pos-33" class="position">33</div>
-        <div id="pos-34" class="position">34</div>
-        <div id="pos-35" class="position">35</div>
-        <div id="pos-36" class="position">36</div>
-        <div id="pos-37" class="position">37</div>
-        <div id="pos-38" class="position">38</div>
+        <div id="pos-1" octave="-2" note="A" class="position">1</div>
+        <div id="pos-2" octave="-2" note="A#" class="position">2</div>
+        <div id="pos-3" octave="-2" note="B" class="position">3</div>
+        <div id="pos-4" octave="-1" note="C" class="position">4</div>
+        <div id="pos-5" octave="-1" note="C#" class="position">5</div>
+        <div id="pos-6" octave="-1" note="D" class="position">6</div>
+        <div id="pos-7" octave="-1" note="D#" class="position">7</div>
+        <div id="pos-8" octave="-1" note="E" class="position">8</div>
+        <div id="pos-9" octave="-1" note="F" class="position">9</div>
+        <div id="pos-10" octave="-1" note="F#" class="position">10</div>
+        <div id="pos-11" octave="-1" note="G" class="position">11</div>
+        <div id="pos-12" octave="-1" note="G#" class="position">12</div>
+        <div id="pos-13" octave="-1" note="A" class="position">13</div>
+        <div id="pos-14" octave="-1" note="A#" class="position">14</div>
+        <div id="pos-15" octave="-1" note="B" class="position">15</div>
+        <div id="pos-16" octave="0" note="C" class="position">16</div>
+        <div id="pos-17" octave="0" note="C#" class="position">17</div>
+        <div id="pos-18" octave="0" note="D" class="position">18</div>
+        <div id="pos-19" octave="0" note="D#" class="position">19</div>
+        <div id="pos-20" octave="0" note="E" class="position">20</div>
+        <div id="pos-21" octave="0" note="F" class="position">21</div>
+        <div id="pos-22" octave="0" note="F#" class="position">22</div>
+        <div id="pos-23" octave="0" note="G" class="position">23</div>
+        <div id="pos-24" octave="0" note="G#" class="position">24</div>
+        <div id="pos-25" octave="0" note="A" class="position">25</div>
+        <div id="pos-26" octave="0" note="A#" class="position">26</div>
+        <div id="pos-27" octave="0" note="B" class="position">27</div>
+        <div id="pos-28" octave="1" note="C" class="position">28</div>
+        <div id="pos-29" octave="1" note="C#" class="position">29</div>
+        <div id="pos-30" octave="1" note="D" class="position">30</div>
+        <div id="pos-31" octave="1" note="D#" class="position">31</div>
+        <div id="pos-32" octave="1" note="E" class="position">32</div>
+        <div id="pos-33" octave="1" note="F" class="position">33</div>
+        <div id="pos-34" octave="1" note="F#" class="position">34</div>
+        <div id="pos-35" octave="1" note="G" class="position">35</div>
+        <div id="pos-36" octave="1" note="G#" class="position">36</div>
+        <div id="pos-37" octave="1" note="A" class="position">37</div>
+        <div id="pos-38" octave="1" note="A#" class="position">38</div>
     </div>
 
     <!-- Alternately: Mouseover mechanism for changing octaves. Maybe for Guitar later. -->
@@ -70,6 +71,27 @@
         <div class="octave">+2</div>
     </div>
     -->
+
+    <details id="legend-interval-shortcuts">
+        <summary>WASD Interval Learning</summary>
+        <div class="legend">W: Root</div>
+        <div class="legend">D: M3/m3</div>
+        <div class="legend">S: P5/D5</div>
+        <div class="legend">A: M7/m7</div>
+        <div class="legend">E: M2/m2</div>
+        <div class="legend">F: P4/A4</div>
+        <div class="legend">C: M6/m6</div>
+        <div class="legend-modifiers">
+            <div>Hold SHIFT for the minor/augmented/diminished.</div>
+            <div>Hold Left-Alt for octave -1</div>
+            <div>Hold Left-Alt AND Left-Ctrl for octave -2</div>
+            <div>Hold Right-Alt for octave 1</div>
+            <div>Hold Righ-Alt AND Right-Ctrl for octave 2</div>
+
+        </div>
+
+
+    </details>
 
     <nav id="click-mode">
         <p></p>
