Added legend tips on the number keys for all majors and perfects

--- a/piano.html
+++ b/piano.html
@@ -74,20 +74,26 @@
 
     <details id="legend-interval-shortcuts">
         <summary>WASD Interval Learning</summary>
-        <div class="legend">W: Root</div>
-        <div class="legend">D: M3/m3</div>
-        <div class="legend">S: P5/D5</div>
-        <div class="legend">A: M7/m7</div>
-        <div class="legend">E: M2/m2</div>
-        <div class="legend">F: P4/A4</div>
-        <div class="legend">C: M6/m6</div>
-        <div class="legend-modifiers">
-            <div>Hold SHIFT for the minor/augmented/diminished.</div>
-            <div>Hold Left-Alt for octave -1</div>
-            <div>Hold Left-Alt AND Left-Ctrl for octave -2</div>
-            <div>Hold Right-Alt for octave 1</div>
-            <div>Hold Righ-Alt AND Right-Ctrl for octave 2</div>
+        <div class="border">
+            <div class="legend">W: Root</div>
+            <div class="legend">D: M3/m3</div>
+            <div class="legend">S: P5/D5</div>
+            <div class="legend">A: M7/m7</div>
+            <div class="legend">E: M2/m2</div>
+            <div class="legend">F: P4/A4</div>
+            <div class="legend">C: M6/m6</div>
+            <div class="legend-modifiers">
+                <br/>
+                <div>Hold SHIFT for the minor/augmented/diminished.</div>
+                <div>Press keys simultaneously for a chord.</div>
+                <div class="pt-10px">Tip: When playing chord with a minor/aug/dim by holding shift:<br/>Press numbers 1-7 for all majors and perfects.</div><br/>
 
+                <div>Hold Left-Alt for octave -1</div>
+                <div>Hold Left-Alt AND Left-Ctrl for octave -2</div>
+                <div>Hold Right-Alt for octave 1</div>
+                <div>Hold Righ-Alt AND Right-Ctrl for octave 2</div>
+
+            </div>
         </div>
 
 
